--- a/styles/Pahanvila.css
+++ b/styles/Pahanvila.css
@@ -135,7 +135,7 @@ nav .fa{
     nav .fa{
         display: block;
         color: #DEB887;
-        margin: 10px;
+        margin: 17px;
         font-size: 22px;
         cursor: pointer;
         text-align: right;
@@ -154,7 +154,7 @@ nav .fa{
     nav{
         padding: 0;
         margin-top: -20px;
-        height: 45px;
+        height: 60px;
     }
     .slide-show img{
 
@@ -236,6 +236,14 @@ nav .fa{
         width: 300px;
         border: 4px solid white
     }
+    .slide-show img{
+        width: 450px;
+        height: 300px;
+    }
+    .facilities-row{
+        
+        flex-direction: column;
+    }
 }
 @media(max-width:1400px){
     .acco img{
@@ -270,6 +278,7 @@ nav .fa{
     .contact-row{
         flex-direction: column;
     }
+    
 }
 
 @media(max-width:900px){
@@ -294,7 +303,6 @@ nav .fa{
     margin-right: auto;
     text-align: center;
     padding-top: 30px;
-    background-image:url("../images/backgroundop.png");
     background-size: cover;
     height: auto;
     
@@ -340,32 +348,13 @@ nav .fa{
     
 }
 .facilities img{
-    width: 650px;
-    height: 450px;
+    width: 550px;
+    height: 400px;
     margin-top: -80px;
     margin-bottom: -80px;
     
 }
 
-@media(max-width:1300px){
-    
-    .facilities img{
-        padding-top: 25px;
-        padding-bottom: 25px;
-        width: 550px;
-        height: 420px;
-        border-radius: 10px;
-    }
-     
-}
-@media(max-width:1200px){
-   
-    .facilities-row{
-        
-        flex-direction: column;
-    }
-     
-}
 @media(max-width:700px){
     .facilities p{
        font-size: 18px ;
