--- a/styles/Pahanvila.css
+++ b/styles/Pahanvila.css
@@ -368,6 +368,7 @@ nav .fa{
 
   
 }
+
 .contact{
     width: 100%;
     margin-top: auto;
@@ -646,4 +647,19 @@ nav .fa{
 }    
  
 
- 
+@media(max-width:600px){
+
+    .facilities img{
+
+        width: auto;
+       
+    }
+    .near img{
+        width: auto;
+        height: 200px;
+    }
+    .acco img{
+        width: auto;
+    }
+
+}
