--- a/styles/Pahanvila.css
+++ b/styles/Pahanvila.css
@@ -271,9 +271,6 @@ nav .fa{
         border-radius: 10px;
         border: 5px solid white
     }
-    .contact-row{
-        flex-direction: column;
-    }
     
 }
 
@@ -441,6 +438,13 @@ nav .fa{
        height:550px;
        position: relative;
     }
+    .contact-row{
+        flex-direction: column;
+        text-align: center;
+    }
+    .contact h3,h4,p{
+        text-align: center;
+    }
 } 
 @media (max-width:1100px) {
     .contact iframe{
@@ -470,6 +474,9 @@ nav .fa{
     .contact iframe{
        width:430px;
        height:250px;
+    }
+    .contact h3,h4,p{
+        text-align: left;
     }
 } 
 
