--- a/styles/Pahanvila.css
+++ b/styles/Pahanvila.css
@@ -124,7 +124,7 @@ nav .fa{
     .nav-links{
         position: absolute;
         background: #F5F5DC;
-        height: 55vh;
+        height: 350px;
         width: 200px;
         top:0;
         right:-200px;
@@ -437,7 +437,7 @@ nav .fa{
     .contact iframe{
        width:1000px;
        height:550px;
-       position: relative;
+       position: inherit;
     }
     .contact-row{
         flex-direction: column;
@@ -691,6 +691,31 @@ nav .fa{
     .contact iframe{
         width:350px;
         height:250px;
+        position: relative;
+     }
+     .slide-show img{
+        width: 350px;
+        height:250px;
+    }
+
+}
+@media(max-width:450px){
+
+    .facilities img{
+
+        width: 350px;
+        height:250px
+    }
+    .near img{
+        width: 250px;
+        height: 140px;
+    }
+    .acco img{
+        width: 300px;
+    }
+    .contact iframe{
+        width:300px;
+        height:210px;
         position: relative;
      }
      .slide-show img{
